[gd_scene load_steps=5 format=2]

[ext_resource path="res://grid_controller.gd" type="Script" id=1]
[ext_resource path="res://file_name.gd" type="Script" id=2]
[ext_resource path="res://Button.gd" type="Script" id=3]
[ext_resource path="res://Node2D.gd" type="Script" id=4]

[node name="one_system" type="Control"]

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -60.5
margin_right = 118.0
margin_bottom = 60.5
rect_pivot_offset = Vector2( 170, 45 )

[node name="ColorRect" type="ColorRect" parent="Panel"]
margin_left = 5.0
margin_top = 0.5
margin_right = 231.0
margin_bottom = 117.5
color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="Button" type="Button" parent="Panel"]
margin_right = 55.0
margin_bottom = 20.0
text = "Load"
script = ExtResource( 3 )

[node name="FileDialog" type="FileDialog" parent="Panel/Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.5
margin_top = -210.0
margin_right = 216.5
margin_bottom = 210.0
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 2
current_dir = "/home/lexu/Documents/Godot/KROPKARA"
current_path = "/home/lexu/Documents/Godot/KROPKARA/"

[node name="load_button" type="Button" parent="Panel"]
margin_left = 58.0
margin_right = 113.0
margin_bottom = 20.0
text = "Reload"

[node name="color_base" type="ColorPickerButton" parent="Panel"]
margin_top = 20.0
margin_right = 94.0
margin_bottom = 43.0
text = "Color base"
color = Color( 0, 0.337255, 0.0196078, 1 )

[node name="color_mid" type="ColorPickerButton" parent="Panel"]
margin_top = 44.0
margin_right = 94.0
margin_bottom = 67.0
text = "Color mid"
color = Color( 0.415686, 0.333333, 0.0941176, 1 )

[node name="color_top" type="ColorPickerButton" parent="Panel"]
margin_top = 67.0
margin_right = 94.0
margin_bottom = 90.0
text = "Color top"
color = Color( 0.517647, 0.517647, 0.517647, 1 )

[node name="coords_indciator" type="Label" parent="Panel"]
margin_left = 5.0
margin_top = 99.0
margin_right = 228.0
margin_bottom = 116.0
text = "y: 2137 y: 2137"

[node name="map_base_num" type="LineEdit" parent="Panel"]
margin_left = 113.0
margin_top = 20.0
margin_right = 228.0
margin_bottom = 44.0
text = "2137"
caret_blink = true
caret_blink_speed = 0.5

[node name="map_mid_num" type="LineEdit" parent="Panel"]
margin_left = 113.0
margin_top = 44.0
margin_right = 228.0
margin_bottom = 68.0
text = "2137"
caret_blink = true
caret_blink_speed = 0.5

[node name="map_top_num" type="LineEdit" parent="Panel"]
margin_left = 113.0
margin_top = 68.0
margin_right = 228.0
margin_bottom = 92.0
text = "2137"
caret_blink = true
caret_blink_speed = 0.5

[node name="file_name" type="Label" parent="Panel"]
margin_left = 113.0
margin_top = 1.0
margin_right = 231.0
margin_bottom = 21.0
text = "FILE NAME"
script = ExtResource( 2 )

[node name="height_indicator" type="Node2D" parent="."]
z_index = 1
z_as_relative = false
script = ExtResource( 4 )

[node name="Label" type="Label" parent="height_indicator"]
margin_top = -14.0
margin_right = 69.0
text = "PAPAJ2173"

[node name="grid_controller" type="Node2D" parent="."]
position = Vector2( 0, -266 )
z_index = -1
z_as_relative = false
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="grid_controller"]
z_index = -1
z_as_relative = false
centered = false

[connection signal="pressed" from="Panel/Button" to="Panel/Button" method="_on_Button_pressed"]
[connection signal="file_selected" from="Panel/Button/FileDialog" to="Panel/file_name" method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="Panel/Button/FileDialog" to="grid_controller" method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="Panel/load_button" to="grid_controller" method="_on_load_button_pressed"]
[connection signal="color_changed" from="Panel/color_base" to="grid_controller" method="_on_color_base_color_changed"]
[connection signal="color_changed" from="Panel/color_mid" to="grid_controller" method="_on_color_mid_color_changed"]
[connection signal="color_changed" from="Panel/color_top" to="grid_controller" method="_on_color_top_color_changed"]
[connection signal="text_changed" from="Panel/map_base_num" to="grid_controller" method="_on_map_base_num_text_changed"]
[connection signal="text_changed" from="Panel/map_mid_num" to="grid_controller" method="_on_map_mid_num_text_changed"]
[connection signal="text_changed" from="Panel/map_top_num" to="grid_controller" method="_on_map_top_num_text_changed"]
[connection signal="draw" from="grid_controller" to="grid_controller" method="_on_grid_controller_draw"]
